[package]
name = "sonos"
version = "0.1.4"
authors = ["Jordan Doyle <jordan@9t9t9.com>"]
license = "MIT"
description = "Sonos controller library for.. controlling Sonos"
repository = "https://github.com/w4/sonos.rs"
keywords = ["sonos", "controller", "music"]
readme = "README.md"
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
log = "0.4"
ssdp = "0.7"
xmltree = "0.10"
failure = "0.1"
regex = "1"
lazy_static = "1"
